@@ -1,6 +1,10 @@
+2011-12-15  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Follow-up to bug #7066: IE embeded media player display
+
 2011-12-14  Stanislas Rolland  <typo3@sjbr.ca>
 
-	* Fixed bug #7066: IE embeeded media player display
+	* Fixed bug #7066: IE embeded media player display
 	* Added feature #32567: Use HTML5 audio tag when available
 	* Follow-up to feature #32567: Use HTML5 audio tag when available
 	* Fixed bug #32579: Incorrect length in header of merged wave file
